2007-05-24  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-account-chooser.c:
	* libempathy-gtk/gossip-new-chatroom-dialog.c:
	* libempathy-gtk/gossip-account-widget-jabber.c:
	* libempathy-gtk/gossip-account-chooser.h:
	* libempathy-gtk/gossip-new-chatroom-dialog.h:
	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/gossip-new-chatroom-dialog.glade:
	* libempathy-gtk/gossip-account-widget-jabber.glade:
	* libempathy-gtk/Makefile.am:
	* libempathy/empathy-tp-chatroom.c:
	* data/gtalk.profile:
	* data/jabber.profile:
	* data/salut.profile:
	* data/Makefile.am:
	* data/empathy.desktop.in.in:
	* data/msn.profile:
	* data/irc.profile: New objects: GossipAccountChooser and
	GossipNewChatroom, we can now join any chatroom. Adding IRC profile.

2007-05-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-idle.c: If we are offline do not set away on idle.
	If we are already away restore to available when we are no mode idle.
	Do no modify status message.

2007-05-21  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-group-chat.c:
	* libempathy-gtk/gossip-group-chat.h:
	* libempathy-gtk/gossip-private-chat.c:
	* libempathy-gtk/gossip-private-chat.h:
	* libempathy-gtk/gossip-group-chat.glade:
	* libempathy-gtk/Makefile.am:
	* src/empathy-chat-main.c:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/gossip-telepathy-group.c:
	* libempathy/gossip-telepathy-group.h:
	* libempathy/empathy-tp-chatroom.c:
	* libempathy/empathy-tp-chatroom.h: Implementing basic chatroom support.
	Actually it works only if we get invited in a chatroom.

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-view.c: Correctly remember the contact
	who sent last message.

2007-05-20  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-view.c: Correctly remember if last message
	comes from the self contact or another.
